# RedBlackTree

./: .gitignore  CMakeLists.txt  README.md
comparator/: comparator.hpp  main.cpp
include/: commands.hpp  node.hpp  range_query.hpp  rbtree_visualizer.hpp  rbtree_vizualizer.hpp  tree.hpp
src/: comparator.cpp  main.cpp
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  reference_answers_generator.py  run_e2e.py  test_file_generator.py
tests/e2e/execution/: main.cpp
tests/e2e/reference/: reference.cpp
tests/e2e/test_data/: 2.ans  3.ans  4.ans  5.ans  test.ans
tests/unit/: CMakeLists.txt  test_tree.cpp
